# mores-community

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile.txt  MORES_技术验证报告.txt  README.md  README_SEMIFINAL.md  SKILL.md  diagnose.sh  fix_counterfactual.py  fix_decision_engine.py  generate_report.py  gitignore  inference1_v31_success.py  mores_batch_rank.py  mores_demo.html  mores_light.pt  mores_local_infer.py  output_real.jsonl  pyproject.toml  requirements.txt  visualize_result.py  visualize_result_ocr.py  靶点评估结果.json
.github/: topics.yml
ancient_text/: Dockerfile  Dockerfile.paddle  Dockerfile.txt  check_training.py  debug_head.py  debug_layers_nosigmoid.py  evaluate_v29.py  fusion_auto.py  inference_fix.py  inference_v27.py  inference_v27_tune.py  inference_v35_high_threshold.py  inference_v36_postprocess.py  preprocess.py  requirements.txt  run.sh  run_baseline.sh  run_mores.py  test_all_models.py  test_detection.py  test_ocr.py  test_paddleocr_v2.py  test_threshold.py  train_det_full.py
ancient_text_engine/: batch_eval.py  batch_eval_report.json  engine_paddle.py  engine_paddle_fixed.py  engine_simple.py  engine_v2.py  integrate_detector.py  mores_engine_v30.py  mores_fusion_engine.py  mores_ocr_engine.py  mores_ocr_engine_optimized.py  mores_ocr_engine_v34.py  submission_v33.py  test_epoch10.py
code/: causal_graph.py  (+7 more)
domestic-ai-adapter/: CMakeLists.txt  LICENSE  README.md
domestic-ai-adapter/include/hal/: device.h  executor.h  registry.h  tensor.h
domestic-ai-adapter/src/hal/: registry.cpp
domestic-ai-adapter/src/test/: test_hal.cpp
(+4737 files in other folders)
